# project-infra

./: .bazelrc  .coderabbit.yaml  .gcloudignore  .gitignore  .golangci.yaml  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  COVERAGE_PLUGIN_DESIGN.md  Makefile  OWNERS  OWNERS_ALIASES  README.md  Vagrantfile  WORKSPACE  ci.yaml  config  go.mod  go.sum  go_third_party.bzl  hosts  jobs
external-plugins/botreview/: BUILD.bazel  Makefile  README.md  main.go
external-plugins/botreview/review/: BUILD.bazel  bump_kubevirtci.go  bump_kubevirtci_test.go  image_update.go  image_update_test.go  kubevirt_uploader.go  kubevirt_uploader_test.go  prow_autobump.go  prow_autobump_test.go  result.go  result_test.go  review.go  review_test.go
external-plugins/botreview/review/testdata/: cdi_arm_release.patch0  mixed_bump_prow_job.patch0  move_prometheus_stack.patch0  move_prometheus_stack.patch1  simple_bump-prow-job-images_sh.patch0  simple_bump-prow-job-images_sh.patch1
external-plugins/botreview/review/testdata/bump-kubevirtci/: bump-kubevirtci.patch0  bump-kubevirtci.patch1  bump-kubevirtci.patch2  bump-kubevirtci.patch3  bump-kubevirtci.patch4
external-plugins/botreview/review/testdata/kubevirtci-bump/: cluster-up-sha.txt  cluster-up_cluster_kind-1.22-sriov_provider.sh  cluster-up_cluster_kind-1.22-sriov_sriov-node_node.sh  cluster-up_cluster_kind_common.sh  cluster-up_cluster_kind_configure-registry-proxy.sh  cluster-up_hack_common.sh  cluster-up_version.txt  hack_config-default.sh
external-plugins/botreview/review/testdata/prow-autobump/: github_ci_prow-deploy_kustom_base_configs_current_config_config.yaml  github_ci_prow-deploy_kustom_base_manifests_local_branch-protector.yaml  github_ci_prow-deploy_kustom_base_manifests_local_cherrypicker_deployment.yaml  github_ci_prow-deploy_kustom_base_manifests_local_label-sync-kubevirt.yaml  github_ci_prow-deploy_kustom_base_manifests_local_label-sync-nmstate.yaml  github_ci_prow-deploy_kustom_base_manifests_test_infra_current_crier_deployment.yaml  github_ci_prow-deploy_kustom_base_manifests_test_infra_current_deck_deployment.yaml  github_ci_prow-deploy_kustom_base_manifests_test_infra_current_ghproxy.yaml  github_ci_prow-deploy_kustom_base_manifests_test_infra_current_hook_deployment.yaml  github_ci_prow-deploy_kustom_base_manifests_test_infra_current_horologium_deployment.yaml  github_ci_prow-deploy_kustom_base_manifests_test_infra_current_needs-rebase_deployment.yaml  github_ci_prow-deploy_kustom_base_manifests_test_infra_current_sinker_deployment.yaml  (+5 more)
external-plugins/botreview/server/: BUILD.bazel  server.go
external-plugins/phased/plugin/: BUILD.bazel  main.go  phased_suite_test.go  phased_test.go
external-plugins/phased/plugin/handler/: BUILD.bazel  handler.go
external-plugins/phased/plugin/server/: BUILD.bazel  eventsserver.go
external-plugins/referee/: BUILD.bazel  Makefile  README.md  main.go  main_test.go
external-plugins/referee/ghgraphql/: BUILD.bazel  client.go  ghgraphql_suite_test.go  labels.go  labels_test.go  pullrequests.go  retests.go  timeline.go  types.go
external-plugins/referee/metrics/: BUILD.bazel  doc.go  metrics.go  metrics_suite_test.go  metrics_test.go  retests.go  retests_test.go
external-plugins/referee/server/: BUILD.bazel  server.go  server_suite_test.go  server_test.go  tooManyRetestsComment.gomd  tooManyRetestsComment.md
external-plugins/rehearse/plugin/: BUILD.bazel  go.mod  go.sum  main.go  rehearse_suite_test.go  rehearse_test.go
external-plugins/rehearse/plugin/handler/: BUILD.bazel  handler.go  handler_test.go  handlersuite_test.go  labels.go
external-plugins/rehearse/plugin/server/: BUILD.bazel  eventsserver.go
external-plugins/release-blocker/: BUILD.bazel  Dockerfile  Makefile  README.md  main.go  server.go  server_test.go  update-job-with-latest-release-blocker-image.sh
external-plugins/testutils/: BUILD.bazel  README.md  fakegithub.go
images/shared-images-controller/: BUILD.bazel  Containerfile  go.mod  go.sum  main.go  storage.conf
limiter/: BUILD.bazel  Makefile  README.md  go.mod  go.sum  limiter.go  limiter_test.go
plugins/cmd/uploader/: BUILD.bazel  README.md  uploader.go
plugins/mirror/: BUILD.bazel  bazel.go  bazel_test.go  go.mod  go.sum  server.go
releng/feature-announce/: BUILD.bazel  feature-announce.go  feature-announce_test.go  upcoming-changes.gomd
releng/release-tool/: BUILD.bazel  Dockerfile.release-tool-base  Makefile  entrypoint.sh  release-tool.go  release-tool_test.go
releng/release-tool/testdata/jobconfig/: kubevirt-presubmits-1.6.yaml
robots/cmd/botreview/: BUILD.bazel  main.go
robots/cmd/ci-usage-exporter/: BUILD.bazel  main.go
robots/cmd/dependabot/: BUILD.bazel  main.go
robots/cmd/flake-issue-creator/: BUILD.bazel  Makefile  cluster_failure.go  cluster_failure_test.go  flake_issue.go  flake_issue_test.go  flake_issues.go  get-image-tag.sh  issue.go  issue_test.go  main.go  main_suite_test.go  main_test.go
robots/cmd/flake-report-creator/: BUILD.bazel  Makefile  README.md  badbuilds.go  main.go
robots/cmd/flake-report-creator/cmd/: BUILD.bazel  cmd_suite_test.go  jenkins-report-template.gohtml  jenkins.go  jenkins_test.go  prow.go  prow_test.go  root.go
robots/cmd/flake-stats/: BUILD.bazel  README.md  flake-stats.gohtml  main.go  main_suite_test.go  main_test.go
robots/cmd/flake-stats-index-page/: BUILD.bazel  main.go
robots/cmd/flakefinder/: BUILD.bazel  Makefile  README.md  index.go  index_test.go  main.go  main_suite_test.go  main_test.go  report.go  report.gohtml  reportCSV.gotemplate  report_test.go
robots/cmd/indexpagecreator/: BUILD.bazel  Makefile  main.go  update-jobs-with-latest-indexpagecreator-image.sh
robots/flakefinder/: BUILD.bazel  Makefile  README.md  downloader.go  downloader_test.go  flakefinder_suite_test.go  index.go  index_test.go  main.go  main_test.go  push.sh  report.go  report.gohtml  reportCSV.gotemplate  report_test.go  update-jobs-with-latest-flakefinder-image.sh
robots/kubevirtci-bumper/: BUILD.bazel  README.md  main.go
robots/release-querier/: BUILD.bazel  README.md  main.go
(+2219 files in other folders)
