# See https://github.com/bazelbuild/rules_python/blob/main/docs/python.md#py_runtime_pair
load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")

py_runtime(
    name = "py2_runtime",
    interpreter_path = "/usr/bin/python2",
    python_version = "PY2",
)

py_runtime(
    name = "py3_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = ":py2_runtime",
    py3_runtime = ":py3_runtime",
)

toolchain(
    name = "py_toolchain",
    toolchain = "py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix kubevirt.io/project-infra
# gazelle:resolve go google.golang.org/grpc/naming @org_golang_google_grpc//naming:go_default_library
# gazelle:proto disable
gazelle(name = "gazelle")

exports_files(["testaccount.json"])
