load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["limiter.go"],
    data = [
        "testaccount.json",
    ],
    importpath = "kubevirt.io/project-infra/limiter",
    visibility = ["//visibility:public"],
    deps = ["//vendor/cloud.google.com/go/storage:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["limiter_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/cloud.google.com/go/iam:go_default_library",
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/google.golang.org/api/option:go_default_library",
    ],
)
