load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["limiter.go"],
    data = [
        "testaccount.json",
    ],
    importpath = "kubevirt.io/project-infra/limiter",
    visibility = ["//visibility:public"],
    deps = ["@com_google_cloud_go_storage//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["limiter_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_google_cloud_go_iam//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)
