load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/external-plugins/referee",
    visibility = ["//visibility:private"],
    deps = [
        "//external-plugins/referee/ghgraphql:go_default_library",
        "//external-plugins/referee/metrics:go_default_library",
        "//external-plugins/referee/server:go_default_library",
        "//vendor/github.com/shurcooL/githubv4:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/k8s.io/test-infra/pkg/flagutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config/secret:go_default_library",
        "//vendor/k8s.io/test-infra/prow/flagutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/interrupts:go_default_library",
        "//vendor/k8s.io/test-infra/prow/pluginhelp/externalplugins:go_default_library",
    ],
)

go_binary(
    name = "referee",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
