load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "kubevirt.io/project-infra/external-plugins/release-blocker",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//pkg/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@io_k8s_test_infra//prow/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/git/v2:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/interrupts:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp/externalplugins:go_default_library",
        "@io_k8s_test_infra//prow/plugins:go_default_library",
        "@io_k8s_test_infra//prow/plugins/ownersconfig:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "app",
    base = "@infra-base//image",
    embed = [":go_default_library"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "Docker",
    image = ":app",
    registry = "quay.io",
    repository = "kubevirtci/release-blocker",
    tag = "{DOCKER_TAG}",
)

go_binary(
    name = "release-blocker",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//external-plugins/testutils:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
    ],
)
