load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fakegithub.go"],
    importpath = "kubevirt.io/project-infra/external-plugins/testutils",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
        "//vendor/k8s.io/test-infra/prow/repoowners:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)
