load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fakegithub.go"],
    importpath = "kubevirt.io/project-infra/external-plugins/testutils",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/pkg/layeredsets:go_default_library",
        "@io_k8s_test_infra//prow/plugins/ownersconfig:go_default_library",
        "@io_k8s_test_infra//prow/repoowners:go_default_library",
    ],
)
