load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/images/shared-images-controller",
    visibility = ["//visibility:private"],
    deps = [
        "//robots/pkg/querier:go_default_library",
        "@com_github_containers_podman_v4//pkg/bindings:go_default_library",
        "@com_github_containers_podman_v4//pkg/bindings/images:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "shared-images-controller",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
