load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bazel.go"],
    importpath = "kubevirt.io/project-infra/plugins/mirror",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/bazelbuild/buildtools/build:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bazel_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/bazelbuild/buildtools/build:go_default_library"],
)
