load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["feature-announce.go"],
    embedsrcs = ["upcoming-changes.gomd"],
    importpath = "kubevirt.io/project-infra/releng/feature-announce",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_go_github//github:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "feature-announce",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["feature-announce_test.go"],
    embed = [":go_default_library"],
)
