load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["feature-announce.go"],
    embedsrcs = ["upcoming-changes.gomd"],
    importpath = "kubevirt.io/project-infra/releng/feature-announce",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/google/go-github/github:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config/secret:go_default_library",
    ],
)

go_binary(
    name = "feature-announce",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["feature-announce_test.go"],
    embed = [":go_default_library"],
)
