load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["release-tool.go"],
    importpath = "kubevirt.io/project-infra/releng/release-tool",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_go_github_v32//github:go_default_library",
        "@com_github_masterminds_semver//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "release-tool",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "release-tool-image",
    base = "@release-tool-base//image",
    directory = "/usr/sbin",
    entrypoint = ["/usr/sbin/entrypoint.sh"],
    files = [
        ":entrypoint.sh",
        ":release-tool",
    ],
    visibility = ["//visibility:public"],
)

container_push(
    name = "release-tool-push",
    format = "Docker",
    image = ":release-tool-image",
    registry = "quay.io",
    repository = "kubevirtci/release-tool",
    tag = "latest",
)

go_test(
    name = "go_default_test",
    srcs = ["release-tool_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_github_v32//github:go_default_library"],
)
