load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "downloader.go",
        "main.go",
        "report.go",
    ],
    importpath = "kubevirt.io/project-infra/robots/flakefinder",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/joshdk/go-junit:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/google.golang.org/api/iterator:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config/secret:go_default_library",
        "//vendor/k8s.io/test-infra/prow/flagutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
    ],
)

go_binary(
    name = "flakefinder",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
