load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

docker_bundle(
    name = "bundle",
    images = {
        "https://cloud.docker.com/u/kubevirtci/repository/docker/kubevirtci/flakefinder:{DOCKER_TAG}": ":flakefinder-image",
        "https://cloud.docker.com/u/kubevirtci/repository/docker/kubevirtci/flakefinder:latest": ":flakefinder-image",
        "https://cloud.docker.com/u/kubevirtci/repository/docker/kubevirtci/flakefinder:latest-{BUILD_USER}": ":flakefinder-image",
    },
    stamp = True,
)

docker_push(
    name = "push",
    bundle = ":bundle",
)

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_image(
    name = "flakefinder-image",
    base = "@distroless-base//image",
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "downloader.go",
        "index.go",
        "main.go",
        "report.go",
    ],
    importpath = "kubevirt.io/project-infra/robots/flakefinder",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/joshdk/go-junit:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/google.golang.org/api/iterator:go_default_library",
        "//vendor/k8s.io/test-infra/prow/config/secret:go_default_library",
        "//vendor/k8s.io/test-infra/prow/flagutil:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
    ],
)

go_binary(
    name = "flakefinder",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
