load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/robots/kubevirtci-bumper",
    visibility = ["//visibility:private"],
    deps = [
        "//robots/pkg/kubevirtci:go_default_library",
        "//robots/pkg/querier:go_default_library",
        "//vendor/github.com/google/go-github/github:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
    ],
)

go_binary(
    name = "kubevirtci-bumper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
