load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "image_update.go",
        "review.go",
    ],
    importpath = "kubevirt.io/project-infra/external-plugins/botreview/review",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sourcegraph_go_diff//diff:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "image_update_test.go",
        "review_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = ["@com_github_sourcegraph_go_diff//diff:go_default_library"],
)
