load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bump_kubevirtci.go",
        "image_update.go",
        "prow_autobump.go",
        "result.go",
        "review.go",
    ],
    importpath = "kubevirt.io/project-infra/external-plugins/botreview/review",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_sourcegraph_go_diff//diff:go_default_library",
        "@io_k8s_test_infra//prow/git:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bump_kubevirtci_test.go",
        "image_update_test.go",
        "prow_autobump_test.go",
        "result_test.go",
        "review_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_andreyvit_diff//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_sourcegraph_go_diff//diff:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
    ],
)
