load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bump_kubevirtci.go",
        "image_update.go",
        "kubevirt_uploader.go",
        "prow_autobump.go",
        "result.go",
        "review.go",
    ],
    importpath = "kubevirt.io/project-infra/external-plugins/botreview/review",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/sourcegraph/go-diff/diff:go_default_library",
        "//vendor/k8s.io/test-infra/prow/git:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bump_kubevirtci_test.go",
        "image_update_test.go",
        "kubevirt_uploader_test.go",
        "prow_autobump_test.go",
        "result_test.go",
        "review_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/andreyvit/diff:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/sourcegraph/go-diff/diff:go_default_library",
        "//vendor/k8s.io/test-infra/prow/github:go_default_library",
    ],
)
