load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "kubevirt.io/project-infra/external-plugins/botreview/server",
    visibility = ["//visibility:public"],
    deps = [
        "//external-plugins/botreview/review:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
    ],
)
