load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/project-infra/external-plugins/phased/plugin",
    visibility = ["//visibility:private"],
    deps = [
        "//external-plugins/phased/plugin/handler:go_default_library",
        "//external-plugins/phased/plugin/server:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//pkg/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/config/secret:go_default_library",
        "@io_k8s_test_infra//prow/flagutil:go_default_library",
        "@io_k8s_test_infra//prow/git/v2:go_default_library",
        "@io_k8s_test_infra//prow/interrupts:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp/externalplugins:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "app",
    base = "@infra-base//image",
    embed = [":go_default_library"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "Docker",
    image = ":app",
    registry = "quay.io",
    repository = "kubevirtci/phased",
    tag = "{DOCKER_TAG}",
)

go_binary(
    name = "plugin",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "phased_suite_test.go",
        "phased_test.go",
    ],
    deps = [
        "//external-plugins/phased/plugin/handler:go_default_library",
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/git/localgit:go_default_library",
        "@io_k8s_test_infra//prow/git/v2:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/github/fakegithub:go_default_library",
        "@io_k8s_test_infra//prow/labels:go_default_library",
    ],
)
