load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "retests.go",
        "types.go",
    ],
    importpath = "kubevirt.io/project-infra/external-plugins/referee/ghgraphql",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_shurcool_githubv4//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
