load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "labels.go",
        "pullrequests.go",
        "timeline.go",
        "types.go",
    ],
    importpath = "kubevirt.io/project-infra/external-plugins/referee/ghgraphql",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/shurcooL/githubv4:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ghgraphql_suite_test.go",
        "labels_test.go",
    ],
    deps = [
        ":go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
