load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    embedsrcs = ["tooManyRetestsComment.md"],
    importpath = "kubevirt.io/project-infra/external-plugins/referee/server",
    visibility = ["//visibility:public"],
    deps = [
        "//external-plugins/referee/ghgraphql:go_default_library",
        "@com_github_shurcool_githubv4//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
    ],
)
