load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    embedsrcs = ["tooManyRetestsComment.gomd"],
    importpath = "kubevirt.io/project-infra/external-plugins/referee/server",
    visibility = ["//visibility:public"],
    deps = [
        "//external-plugins/referee/ghgraphql:go_default_library",
        "//external-plugins/referee/metrics:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_test_infra//prow/config:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
        "@io_k8s_test_infra//prow/pjutil:go_default_library",
        "@io_k8s_test_infra//prow/pluginhelp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "server_suite_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//external-plugins/referee/ghgraphql:go_default_library",
        "@com_github_onsi_ginkgo_v2//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@io_k8s_test_infra//prow/github:go_default_library",
    ],
)
